# strangeloop

./: .gitignore  README.md  hello.py  pyproject.toml
strangeloop/: __init__.py  cli.py  config.py  dynamic.py  llm.py
strangeloop/capabilities/: __init__.py  fetch_current_bitcoin_price.py  generate_secure_password.py  get_public_ip_address.py
